--- a/client/src/components/Navbar/Navbar.module.css
+++ b/client/src/components/Navbar/Navbar.module.css
@@ -11,3 +11,29 @@
   font-size: 3rem;
   color: rgb(223, 223, 223);
 }
+
+.Flex {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.NavList {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+.NavItem {
+  margin: 0 0.85rem;
+}
+
+.NavLink {
+  padding: 0.5rem 1.5rem;
+  color: #fff;
+  border-radius: 4px;
+}
+
+.NavLink:hover {
+  background: rgb(201, 130, 0);
+}
