--- a/client/src/components/Navbar/Navbar.module.css
+++ b/client/src/components/Navbar/Navbar.module.css
@@ -32,6 +32,10 @@
   padding: 0.5rem 1.5rem;
   color: #fff;
   border-radius: 4px;
+  cursor: pointer;
+  background-color: transparent;
+  outline: none;
+  border: none;
 }
 
 .NavLink:hover {
